# yw-p

./: .pre-commit-config.yaml  MANIFEST.IN  README.md  pyproject.toml  requirements.txt  setup.cfg
src/yesworkflow/: __main__.py
src/yesworkflow/commands/: cli.py  extract.py
src/yesworkflow/config/: add_config_argument.py  load_properties.py
src/yesworkflow/language/: infer_language.py  language.yaml
src/yesworkflow/parse/: YW.g4  YW.interp  YWLexer.interp  YWLexer.py  YWListener.py  YWParser.py  parse.py
tests/yesworkflow/extract/: test_basics.py
